# income2019

./: .flake8  .travis.yml  MANIFEST.in  README.rst  setup.cfg  tox.ini
src/table_validator/: __init__.py  __main__.py  api.py  cli.py  pp.py  validators.py
src/table_validator/desktop/: __main__.py  petab_measurements.py  validation_drop_target.py
src/table_validator/web/: __init__.py  __main__.py  app.py  cli.py  web.py
src/table_validator/web/templates/: index.html
tests/: __init__.py  repeat_template.tsv  simple_candidate.tsv  simple_candidate_invalid.tsv  simple_template.tsv  test_cli.py  test_validator.py
