##########################
# Setup.py Configuration #
##########################
[metadata]
name = table_validator
version = 0.0.1-dev
description = Use tables with validation schemata to validate other tables.
long_description = file: README.rst

# URLs associated with the project
url = https://github.com/cthoyt/table-validator
download_url = https://github.com/cthoyt/table-validator/releases
project_urls =
    Bug Tracker = https://github.com/cthoyt/table-validator/issues
    Source Code = https://github.com/cthoyt/table-validator

# Author information
author = Charles Tapley Hoyt
author_email = cthoyt@gmail.com
maintainer = Charles Tapley Hoyt
maintainer_email = cthoyt@gmail.com

# License Information
license = MIT
license_file = LICENSE

# Search tags
classifiers =
    Development Status :: 4 - Beta
	Environment :: Console
    Intended Audience :: Developers
	Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
	Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3 :: Only
keywords =
	Tables
    Validation

[options]
install_requires =
    pyparsing
    tqdm
    pandas
    click

# Random options
zip_safe = false
include_package_data = True
python_requires = >=3.6

# Where is my code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.extras_require]
web =
    flask
    flask-wtf
    flask-bootstrap
desktop =
    PyQt5
docs =
	sphinx
	sphinx-rtd-theme
	sphinx-click
	sphinx-autodoc-typehints

[options.entry_points]
console_scripts =
    table_validator = table_validator.cli:main

######################
# Doc8 Configuration #
# (doc8.ini)         #
######################
[doc8]
max-line-length = 120

##########################
# Coverage Configuration #
# (.coveragerc)          #
##########################
[coverage:run]
branch = True
source = table_validator
omit =
    tests/*
    docs/*
    scripts/*

[coverage:paths]
source =
    src/table_validator
    .tox/*/lib/python*/site-packages/table_validator

[coverage:report]
show_missing = True
exclude_lines =
    def __str__
    def __repr__
